--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -5,10 +5,14 @@
       %ul
         - @comment.errors.full_messages.each do |msg|
           %li= msg
-  %label body_comments
-  = f.text_field :body_comments
+  %label Body Comment
+  %br
+  = f.text_area :body_comments
+  %br
+  %br  
   %label location
-  = f.text_area :location
+  %br
+  = f.text_field :location
 
 
   .actions
