--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,8 +6,26 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
+    .navbar
+  .navbar-inner
+    .container
+      / .btn-navbar is used as the toggle for collapsed navbar content
+      %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+      / Be sure to leave the brand out there if you want it shown
+      %a.brand{:href => "#"} Project name
+      / Everything you want hidden at 940px or less, place within here
+      .nav-collapse
+        / .nav, .navbar-search, .navbar-form, etc
     - if current_user
       = link_to 'Logout', destroy_user_session_path, :method => :delete
     %p.notice= notice
     %p.alert= alert
-    = yield
+    .container
+      .row
+        .span9= yield
+        .span3
+          %h2 Recent Posts
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
